finished the first homework

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,18 @@
     <div id='container'>
         <div id='tooltip'></div>
         <svg></svg>
+        <div id="panel">
+            <h4>Filter</h4>
+            <input type="text" id="filter" value="Tsinghua University">
+            <div id="input_con"></div>
+            <div id="selection">
+                <h4>Value</h4>
+                <ul class="sidebar">
+                    <li onclick="onclick1();">H-index</li>
+                    <li onclick="onclick2();">Citations</li>
+                </ul>
+            </div>
+        </div>
     </div>
 
     <!-- <script type="module" src="web_modules/jquery.js"></script> -->
