initialize for assignment 2

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello</title>
+    <title>Assignment 2</title>
     <link rel="stylesheet" href="dist/css/style.css">
 </head>
 <body>
-    Hello World!
+    <div id='container'>
+		<svg></svg>
+	</div>
     <script type="module" src="dist/index.js"></script>
 </body>
 </html>
