--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello</title>
-    <link rel="stylesheet" href="dist/css/style.css">
+    <link rel="stylesheet" href="_dist_/css/style.css">
 </head>
 <body>
     Hello World!
-    <script type="module" src="dist/index.js"></script>
+    <script type="module" src="_dist_/index.js"></script>
 </body>
 </html>
