implemented time selector

--- a/public/index.html
+++ b/public/index.html
@@ -16,21 +16,26 @@
     </header>
     <div id="content">
       <div id="l1">
-        <div id="timespan"></div>
+        <div id="timespan">
+          <p class="label">Range Selected: <span id="range">[1950, 2020]</span></p>
+          <div class="frame">
+            <svg id="p1" height="24"></svg>
+          </div>
+        </div>
         <div class="frame">
-          <svg id="p1"></svg>
+          <svg id="p2"></svg>
         </div>
       </div>
       <div id="l2">
         <div class="frame">
-          <svg id="p2"></svg>
+          <svg id="p3"></svg>
         </div>
         <div class="frame">
-          <svg id="p3"></svg>
+          <svg id="p4"></svg>
         </div>
       </div>
       <div id="l3" class="frame">
-        <svg id="p4"></svg>
+        <svg id="p5"></svg>
       </div>
     </div>
     <!-- <div id="left">
