--- a/public/index.html
+++ b/public/index.html
@@ -61,13 +61,7 @@
             <h2 class="caption">关键词出现次数全年占比随时间变化图（%）</h2>
             <svg id="Series" width="590" height="400"></svg>
         </div>
-        <div id="Info-container">
-            <h2 class="caption">相关论文</h2>
-            <span id="num"></span>
-            <div id="Info" width="620" height="220"></div>
-        </div>
-    </div>
-    <div class="details"></div> -->
+    </div> -->
     <script type="module" src="_dist_/index.js"></script>
   </body>
 </html>
