--- a/public/index.html
+++ b/public/index.html
@@ -35,33 +35,10 @@
         </div>
       </div>
       <div id="l3" class="frame">
-        <svg id="p5"></svg>
+        <!-- <svg id="p5"></svg> -->
       </div>
     </div>
-    <!-- <div id="left">
-        <div id="Node-container">
-            <h2 class="caption">关键词共现次数</h2>
-            <div id="toolbar">
-                <div data-trigger="spinner" id="spinner">
-                    <button type="button" data-spin="down">-</button>
-                    <input type="text" value="2008" data-ruler="quantity" data-max='2019' data-min="2004">
-                    <button type="button" data-spin="up">+</button>
-                </div>
-            </div>
-            <svg id="Node" width="530" height="550"></svg>
-        </div>
-    </div>
-
-    <div id="right">
-        <div id="Pack-container">
-            <h2 class="caption">关键词聚类结果</h2>
-            <svg id="Pack" width="400" height="400"></svg>
-        </div>
-        <div id="Series-container">
-            <h2 class="caption">关键词出现次数全年占比随时间变化图（%）</h2>
-            <svg id="Series" width="590" height="400"></svg>
-        </div>
-    </div> -->
+    <div id="tooltip"></div>
     <script type="module" src="_dist_/index.js"></script>
   </body>
 </html>
